# AppFlowy-Web

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build_ghcr.yml
scripts/: appflowy-cli.js
scripts/folder-recovery/: .gitignore  README.md  package.json
scripts/folder-recovery/lib/: project.js
src/@types/translations/: ar-SA.json  ca-ES.json  ckb-KU.json  cs-CZ.json  de-DE.json  el-GR.json  en.json  es-VE.json  fr-CA.json  fr-FR.json  he.json  it-IT.json  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  sv-SE.json  th-TH.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
src/components/_shared/helmet/: ViewHelmet.tsx
src/components/_shared/landing-page/: errorContent.ts
src/components/app/header/: RightMenu.test.tsx
src/components/app/share/: useShareAccessDetails.ts
src/components/app/workspaces/: Workspaces.tsx
src/components/editor/: StaticEditor.tsx
src/components/error/: ElementFallbackRender.tsx  NotFound.tsx
src/components/login/: Login.tsx
tools/doc-sync/: .gitignore
tools/doc-sync/automation/: HEARTBEAT.md  VISUAL.html
tools/doc-sync/collab-sync/: .gitignore  Cargo.toml  add-markers.py  regenerate-docs.py  seed-all.sh  sync-pipeline.sh
tools/doc-sync/collab-sync/mcp-server/: index.js  package-lock.json  package.json
tools/doc-sync/collab-sync/patches/: 0001-fix-mailer-from-name.patch  tin-mailer-fixes.patch
tools/doc-sync/collab-sync/sop-content/: Commands Reference.md  Installation.md  Overview.md  Regeneration & Pipeline.md  Section Markers.md  Troubleshooting.md
tools/doc-sync/collab-sync/src/: main.rs
(+1 files in other folders)
